--- a/assets/css/grey-dark.css
+++ b/assets/css/grey-dark.css
@@ -331,6 +331,7 @@
 .grey.dark .view-container > form > div > section > p,
 .grey.dark .section-body > p,
 .grey.dark .brand,
+.grey.dark .img-card > h4,
 .grey.dark ul.list-view > li > section:first-child > div > h4,
 .grey.dark ul.list-view > li > section:first-child > div > h4 > a,
 .grey.dark .card > section > p,
@@ -338,6 +339,7 @@
 .grey.dark .video > section > p,
 .grey.dark .video > section > p > a,
 .grey.dark li.video > h4 > a,
+.grey.dark .img-card > p,
 .grey.dark ul.list-view > li > section:first-child > div > p,
 .grey.dark ul.list-view > li > div > h4,
 .grey.dark ul.list-view > li > div > p,
@@ -681,10 +683,6 @@
   color: #657181 !important;
 }
 
-.grey.dark .view-container > form > div > label.search-input > *,
-.grey.dark .view-container > div > label.search-input > *,
-.grey.dark .view-body > label.search-input > *,
-.grey.dark .row > .col > label.search-input > *,
 .grey.dark .row > label.search-input > *,
 .grey.dark .search-input > * {
   border-color: #2f3033 !important;
