--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -45,6 +45,7 @@ footer > .btn-cancel {
   min-width: 12px;
   padding-left: 0;
   padding-right: 0;
+  margin-left: 10px;
 }
 .btn-detail::before {
   font-size: 34px;
